--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "NGE"
 uuid = "ec2a047c-4994-4daa-8e9f-1089d0d3955b"
 authors = ["ay-aki <aki.yamada.1999@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+SimpleDirectMediaLayer = "98e33af6-2ee5-5afd-9e75-cbc738b767c4"
